# Sonic4_ModLoader

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README-tldr.txt  README.md  README.rtf  README.txt  bash.bat  build.rs  build.sh  build_linux_release.sh  build_n_pack_linux.sh  build_pack_test.sh  build_pack_x86.sh  fix_sh_newline.py  open-bash.bat  pack.sh  pack_linux.sh  pack_win.bat  pack_win.sh  python3-is-python.bat  update_dependencies.sh  update_dependencies_linux.sh  update_dependencies_win.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main-rs.yml  main.yml  main_linux.yml  main_win.yml  release.yml  release_linux.yml  release_win.yml
Sonic4_ModLoader/: Sonic4_ModLoader.sln
Sonic4_ModLoader/AMBPatcher/: AMB.cs  AMBPatcher.csproj  Log.cs  Program.cs  ProgressBar.cs  Settings.cs  ShaChecker.cs
Sonic4_ModLoader/Common/: Game.cs  Ini.cs  IniReader.cs  Launcher.cs  Mod.cs  Mods.cs  MyIO.cs  URL.cs  ValueUpdater.cs
Sonic4_ModLoader/ManagerLauncher/: App.config  Form1.Designer.cs  Form1.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  ManagerLauncher.csproj  Program.cs
Sonic4_ModLoader/OneClickModInstaller/: ArgsHandler.cs  DFtEM.Designer.cs  DFtEM.cs  DownloadForm.Designer.cs  DownloadForm.cs  Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  Install.Designer.cs  Install.cs  InstallationForm.Designer.cs  InstallationForm.cs  ModArchive.cs  ModInstallationInstance.cs  OneClickModInstaller.csproj  Program.cs  SelectRoots.Designer.cs  SelectRoots.cs  SelectRoots.resx  Settings.cs  Suspicious.Designer.cs  Suspicious.cs  TooManyMods.Designer.cs  TooManyMods.cs  TooManyMods.resx  UltimateWinForm.Designer.cs  UltimateWinForm.cs  UltimateWinForm.resx  WrongModStructureForm.Designer.cs  WrongModStructureForm.cs  WrongModStructureForm.resx  WrongWorkingDirectory.Designer.cs  WrongWorkingDirectory.cs  WrongWorkingDirectory.resx  app.manifest
Sonic4_ModLoader/PatchLauncher/: PatchLauncher.csproj  Program.cs
Sonic4_ModLoader/Sonic4ModManager/: About.Designer.cs  About.cs  Extensions.cs  FirstLaunch.Designer.cs  FirstLaunch.cs  FirstLaunch.resx  (+22 more)
dependencies/: readme.md
docs/: AMB structure.md  Compile on Linux.md  Compile on Windows.md  FAQ.md  How to compile.md  How to use AMBPatcher.md  Index.md  Level file structure.md  Mod Loader - Whats new.txt  Mod structure.md  README.rtf  README.txt  build-on-linux.md  build-on-windows.md  compile.md  files  readme.md
rust/ManagerLauncher/: Cargo.toml  build.rs
rust/ManagerLauncher/src/: application.rs  main.rs  window.rs
rust/ManagerLauncher/src/resources/: resources.gresource.xml  window.ui
rust/Sonic4ModManager_link/: Cargo.toml
rust/common/: Cargo.toml
rust/common/src/: generate-version.sh  global.rs  global.rs.in  lib.rs
rust/common/src/config/: config.rs
rust/common/src/mod_logic/: existing_mod.rs  mod_dummy.rs  mod_entry.rs
rust/common_gtk4/: Cargo.toml
rust/common_gtk4/src/: lib.rs
src/: main.rs  windows.manifest
src/AMBPatcher/: Cargo.toml
src/AMBPatcher/src/: amb.rs  main.rs
src/ManagerLauncher/: Cargo.toml  application.rs  build.rs  main.rs  window.rs
src/ManagerLauncher/resources/: window.ui
src/ManagerLauncher/src/: application.rs  main.rs  window.rs
src/ManagerLauncher/src/resources/: window.ui
src/ManagerLauncher/window/: imp.rs  mod.rs
src/Sonic4FilePatcher/: Cargo.toml  build.rs
src/Sonic4FilePatcher/src/: help.rs  main.rs  mod_management.rs  sha_checker.rs  version.rs
src/Sonic4FilePatcher/tests/: test.rs
src/Sonic4FilePatcher/tests/hashes/: ml_changed_0  ml_changed_1  ml_changed_3  ml_changed_5  ml_changed_6  ml_empty  ml_inversed  ml_recover  ml_single
src/Sonic4ModManager/: Cargo.toml  build.rs
src/Sonic4ModManager/src/: application.rs  buffer_formatter.rs  installation.rs  main.rs  settings_dialog.rs  window.rs
src/Sonic4ModManager/src/models/: g_mod_entry.rs  mod.rs
src/Sonic4ModManager/src/resources/: resources.gresource.xml  window.ui  window_settings.ui
src/amb-rs/: Cargo.toml
src/amb-rs-lib/: Cargo.toml
src/amb-rs-lib/src/: amb.rs  binary_object.rs  binary_reader.rs  binary_writer.rs  error.rs  lib.rs
src/amb-rs-lib/src/amb_management/: create.rs  endianness.rs  extract.rs  extract_all.rs  json.rs  mod.rs  recreate.rs  remove.rs
src/amb-rs-lib/src/amb_management/add/: directory.rs  file.rs  mod.rs
src/amb-rs-tests/: Cargo.toml
src/amb-rs-tests/amb_files/: readme.md
src/amb-rs-tests/amb_files/pc/: EMPTY.AMB
src/amb-rs-tests/src/: lib.rs
src/amb-rs-tests/test_files/files/: 1  2  3
src/amb-rs-tests/test_files/mods/mods/3/textures/actions.amb/: media.amb
src/amb-rs-tests/test_files/mods/textures/: notifications.amb
src/amb-rs-tests/test_files/tango-icon-theme/: special thanks
src/amb-rs-tests/tests/: add.rs  add_nested.rs  amb_print.rs  create.rs  endianness.rs  extract.rs  read.rs  read_reference_files.rs  remove.rs
src/amb-rs-tests/tests/reference_files/: add_1_2_3.amb  add_1_3.amb  add_1_3_2.amb  add_2_1_3.amb  add_2_3.amb  add_2_3_1.amb  add_3.amb  add_3_1.amb  add_3_1_2.amb  add_3_2.amb  add_3_2_1.amb  add_empty.amb
src/amb-rs-tests/tests/reference_files/be/: add_1_2_3.amb
src/amb-rs-tests/tests/reference_files/le/: add_1.amb  add_1_2.amb  add_1_2_3.amb  add_2.amb  add_2_1.amb  add_2_1_3.amb  add_2_3.amb  add_3.amb  add_3_2_1.amb  add_as_0.amb
src/amb-rs-tests/tests/reference_files/le/nested/: actions.amb  devices.amb  new_media_for_ml_3.amb  new_weather_for_ml_4.amb  notifications.amb
src/amb-rs/src/: amb.rs  amb_management.rs  binary_reader.rs  binary_writer.rs  help.rs  main.rs  mod_management.rs  sha_checker.rs  show_help.rs
src/amb-rs/src/amb_management/: common_hander.rs  create.rs  endianness.rs  extract.rs  extract_all.rs  json.rs  mod.rs  recreate.rs  remove.rs
src/amb-rs/src/amb_management/add/: directory.rs  file.rs
src/common_gtk4/: Cargo.toml
src/common_gtk4/src/: lib.rs
src_old/: Sonic4_ModLoader.sln  generate-version.sh  version
tests/: commons.py  paths.py  rebuild_sha.sh  run_tests.sh
unit-tests/: run_tests.sh
(+183 files in other folders)
