[workspace]
members = [
    "src/amb-rs",
    "src/amb-rs-lib",
    "src/amb-rs-tests",
    "src/common",
    "src/common_binary",
    "src/common_gtk4",
    "src/ManagerLauncher",
    "src/ManagerLauncher_link",
    "src/Sonic4ModManager",
    "src/Sonic4ModManager_link",
    "src/Sonic4FilePatcher",
    "src/OneClickModInstaller",
    "src/OneClickModInstaller_link",
]
resolver = "3"