[workspace]
members = [
    "src/common_gtk4",
    "src/common_modloader",
    "src/ManagerLauncher",
    "src/ManagerLauncher_link",
    "src/Sonic4ModManager",
    "src/Sonic4ModManager_link",
    "src/Sonic4FilePatcher",
    "src/OneClickModInstaller",
    "src/OneClickModInstaller_link",
]
resolver = "3"