[package]
name = "Sonic4ModManager_link"
description = "Link to the Sonic 4 Mod Manager"
version = "1.0.0"
edition = "2021"
authors = ["Oleg \"OSA413\" Sokolov"]
repository = "https://github.com/OSA413/Sonic4_ModLoader"
homepage = "https://github.com/OSA413/Sonic4_ModLoader"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hide_console = "0.2.1"

[build-dependencies]
winresource = "0.1.17"