[package]
name = "common"
edition = "2021"
authors = ["Oleg \"OSA413\" Sokolov"]
repository = "https://github.com/OSA413/Sonic4_ModLoader"
homepage = "https://github.com/OSA413/Sonic4_ModLoader"
license = "MIT"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"