[package]
name = "ManagerLauncher"
description = "Launches the Manager into Space"
version = "1.0.0"
edition = "2024"
authors = ["Oleg \"OSA413\" Sokolov"]
repository = "https://github.com/OSA413/Sonic4_ModLoader"
homepage = "https://github.com/OSA413/Sonic4_ModLoader"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.11.1", package = "gtk4", features = ["v4_14"] }
common_modloader = { path = "../common_modloader" }
common_gtk4 = { path = "../common_gtk4" }

[build-dependencies]
glib-build-tools = "0.22.8"
winresource = "0.1.31"
