[package]
name = "Sonic4FilePatcher"
description = "File patcher for file mods"
version = "1.0.0"
edition = "2021"
authors = ["Oleg \"OSA413\" Sokolov"]
repository = "https://github.com/OSA413/Sonic4_ModLoader"
homepage = "https://github.com/OSA413/Sonic4_ModLoader"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
amb-rs-lib = { path = "../amb-rs-lib" }
glob = "0.3.3"
sha1 = "0.10.6"
indicatif = "0.18.2"

[build-dependencies]
winresource = "0.1.17"