[package]
name = "Sonic4FilePatcher"
description = "File patcher for file mods"
version = "1.0.0"
edition = "2024"
authors = ["Oleg \"OSA413\" Sokolov"]
repository = "https://github.com/OSA413/Sonic4_ModLoader"
homepage = "https://github.com/OSA413/Sonic4_ModLoader"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
amb-rs-lib = { path = "../amb-rs-lib" }
sha2 = "0.11.0"
indicatif = "0.18.6"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"

[build-dependencies]
winresource = "0.1.31"
