[package]
name = "Sonic4ModManager"
description = "The thing that manages mods"
version = "1.0.0"
edition = "2021"
authors = ["Oleg \"OSA413\" Sokolov"]
repository = "https://github.com/OSA413/Sonic4_ModLoader"
homepage = "https://github.com/OSA413/Sonic4_ModLoader"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.8", package = "libadwaita", features = ["v1_7"] }
gtk = { version = "0.10.0", package = "gtk4", features = ["v4_18"] }
common = { path = "../common" }
common_gtk4 = { path = "../common_gtk4" }

[build-dependencies]
glib-build-tools = "0.20"
winresource = "0.1.17"