[package]
name = "amb-rs-tests"
description = "AMB Container Editor Tests"
edition = "2024"
authors = ["Oleg \"OSA413\" Sokolov"]
repository = "https://github.com/OSA413/Sonic4_ModLoader"
homepage = "https://github.com/OSA413/Sonic4_ModLoader"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
amb_rs_lib = { path = "../amb-rs-lib", package = "amb-rs-lib"}
serde = "1.0.228"
serde_json = "1.0.145"
common = { path = "../common" }
